# uba-aed3-tp1-2c-2019

./: CMakeLists.txt  README.md  index.php  main.cpp
src/entities/: Item.cpp  Item.h
src/executables/: backTracking-main-time.cpp  backTracking-main.cpp  bottom_up-main-time.cpp  bottom_up-main.cpp  bruteForce-main-time.cpp  bruteForce-main.cpp  top_down-main-time.cpp  top_down-main.cpp
src/solutions/: BackTracking.cpp  BackTracking.h  BruteForce.cpp  BruteForce.h  DinamicProgrammingBottomUp.cpp  DinamicProgrammingBottomUp.h  DinamicProgrammingTopDown.cpp  DinamicProgrammingTopDown.h  KnapSack.cpp  KnapSack.h
test/solutions/: BruteForceTest.cpp  KnapSackTest.cpp
test/test-instance/: tp-default-instance
